# SOF_EXAM_25

./: .env  .gitignore  Cargo.toml  README.md
DATABASE_EXAM/: .env  Docker-compose.yml  Init.sql  README.md  how_to_setup.md
DATABASE_EXAM/data/shard1-a/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0-13341508386994047854.wt  collection-0-9545372620039758407.wt  collection-12-9545372620039758407.wt  collection-14-9545372620039758407.wt  collection-15-9545372620039758407.wt  collection-17-9545372620039758407.wt  collection-19-9545372620039758407.wt  collection-2-13341508386994047854.wt  collection-2-9545372620039758407.wt  collection-39-9545372620039758407.wt  collection-4-9545372620039758407.wt  collection-41-9545372620039758407.wt  collection-43-9545372620039758407.wt  collection-46-9545372620039758407.wt  collection-48-9545372620039758407.wt  collection-50-9545372620039758407.wt  collection-53-9545372620039758407.wt  collection-57-9545372620039758407.wt  collection-6-9545372620039758407.wt  collection-8-9545372620039758407.wt  index-1-13341508386994047854.wt  index-1-9545372620039758407.wt  index-13-9545372620039758407.wt  index-16-9545372620039758407.wt  index-18-9545372620039758407.wt  index-20-9545372620039758407.wt  index-3-13341508386994047854.wt  index-3-9545372620039758407.wt  index-4-13341508386994047854.wt  index-40-9545372620039758407.wt  index-42-9545372620039758407.wt  index-44-9545372620039758407.wt  index-45-9545372620039758407.wt  index-47-9545372620039758407.wt  index-49-9545372620039758407.wt  index-5-13341508386994047854.wt  (+7 more)
DATABASE_EXAM/data/shard2-a/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0-15512066617982378932.wt  collection-0-17722149284012087563.wt  collection-10-15512066617982378932.wt  collection-12-15512066617982378932.wt  (+36 more)
ML_AI_EXAM/: README.md
Patches/wgpu-hal/: .cargo_vcs_info.json  Cargo.toml
src/: PathMap2dExt.rs  combat.rs  events.rs  game.rs  generating_weapon.rs  main.rs  main_menu.rs  map.rs  map_state.rs  monster.rs  player.rs  render.rs  turn_system.rs  ui.rs  visibility.rs
src/dbs/: mod.rs  mongodb.rs  playerdb.rs  psqldb.rs  redisdb.rs  weapondb.rs
src/python/: __init__.py  ai_calls.py  model_predictor.py
src/weapon_prediction/: bridge.rs
(+38 files in other folders)
