[package]
name = "Rust_exam_game"
version = "0.4.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["track_location"] }
bevy_ascii_terminal = "0.17.0"
sark_grids = "0.6.2"
sark_pathfinding = "0.4.0"
adam_fov_rs = "0.4"
rand = "0.9.1"
ron = "0.10.1"
serde = "1.0.219"
bracket-random = "0.8.7"
interpolation = "0.3.0"
astar = "4.0.0"
controlled_astar = "1.0.1"
winapi = { version = "0.3.9", features = ["winbase"] }
bevy-inspector-egui = "0.31.0"

[profile.release]
opt-level = 's'
lto = true
