[package]
name = "Rust_exam_game"
version = "0.4.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["track_location"] }
bevy_ascii_terminal = "0.17.0"
sark_grids = "0.6.2"
sark_pathfinding = "0.4.0"
adam_fov_rs = "0.4"
rand = "0.9.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"]  }
bracket-random = "0.8.7"
interpolation = "0.3.0"
astar = "4.0.0"
controlled_astar = "1.0.1"
winapi = { version = "0.3.9", features = ["winbase"] }
bevy-inspector-egui = "0.31.0"
mongodb = "2.8.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.4", features = ["v4"] }
dotenvy = "0.15"
redis = { version = "0.28", features = ["tokio-comp"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
chrono = "0.4.41"
sqlx = "0.8.6"
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
crossbeam-channel = "0.5"
bevy_async_task = "0.8"
anyhow = "1.0.98"
futures-lite = "2.6.0"


[profile.release]
opt-level = 's'
lto = true
